--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,13 @@ var/
 .installed.cfg
 *.egg
 
+bin/
+lib64
+pip-selfcheck.json
+pyvenv.cfg
+share/
+
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
